--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=scheduler-task
+spring.datasource.url=jdbc:mysql://localhost:3306/scheduler
+spring.datasource.username=root
+spring.datasource.password=layout1047
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
